--- a/style.css
+++ b/style.css
@@ -273,15 +273,15 @@ video {
 }
 
 #card1 {
-    background-image: url(https://eiwgew27fhz.exactdn.com/wp-content/uploads/2023/02/home-toptracer-768x512.jpg?strip=all&lossy=1&sharp=1&ssl=1);
+    background-image: url(Covers/container1.avif);
 }
 
 #card2 {
-    background-image: url(https://eiwgew27fhz.exactdn.com/wp-content/uploads/2023/02/hero-4.jpg?strip=all&lossy=1&sharp=1&fit=1024%2C1024&ssl=1);
+    background-image: url(Covers/container2.avif);
 }
 
 #card3 {
-    background-image: url(https://eiwgew27fhz.exactdn.com/wp-content/uploads/2023/02/home-lessons.jpg?strip=all&lossy=1&sharp=1&fit=1024%2C682&ssl=1);
+    background-image: url(Covers/container3.webp);
 }
 
 .overlay {
